# project-chimera

./: .coderabbit.yaml  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: ci-cd.yml
backend/: README.md
frontend/: README.md  package.json  tsconfig.json
frontend/app/: globals.css  layout.tsx  page.tsx
research/: architecture_strategy.md
skills/skill_execute_payment/: README.md
skills/skill_fetch_trends/: README.md
skills/skill_transcribe_audio/: README.md
specs/: _meta.md  functional.md  openclaw_integration.md  technical.md
src/chimera/api/: main.py
tests/: test_skills_interface.py  test_trend_fetcher.py
