[project]
name = "chimera-core"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.77.1",
    "asyncpg>=0.31.0",
    "fastapi[standard]>=0.128.0",
    "google-generativeai>=0.8.6",
    "httpx>=0.28.1",
    "langchain>=1.2.8",
    "langgraph>=1.0.7",
    "loguru>=0.7.3",
    "mcp>=1.26.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "python-dotenv>=1.2.1",
    "redis>=7.1.0",
    "ruff>=0.15.0",
    "ty>=0.0.14",
    "weaviate-client>=4.19.2",
]
